# mongogui

./: .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  Makefile  PROJECT_COMPLETE.md  README.md  USAGE_EXAMPLES.md  bandit-report.json  fix_connection_widgets.py  launcher.py  main.py  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
core/: __init__.py  connection_manager.py  mongo_client.py  query_preprocessor.py  utils.py
db/: __init__.py  connection_manager.py  constants.py  mongo_client.py  query_preprocessor.py  result.py  utils.py
gui/: app.py  collection_panel.py  connection_dialog.py  connection_manager_window.py  connection_widgets.py  connection_widgets_fixed.py  constants.py  edit_document_dialog.py  index_dialog.py  main_window.py  query_panel.py  query_panel_fixed.py  query_tab.py  ui_utils.py
scripts/: README.md  build.sh  dev.ps1  dev.sh  launcher.sh  run.ps1  run.sh  setup.sh  test.sh
tests/: __init__.py  conftest.py  test_connection_manager.py  test_explain.py  test_index_management.py  test_integration.py  test_main_window.py  test_mongo_client.py  test_mongo_client_indexes.py  test_query_preprocessor.py  test_query_tabs.py  test_utils.py
ui/: __init__.py  aggregation_pipeline_builder.py  app.py  collection_panel.py  connection_dialog.py  connection_manager_window.py  connection_widgets.py  constants.py  edit_document_dialog.py  enhanced_query_builder_dialog.py  index_dialog.py  json_highlighter.py  main_window.py  query_builder.py  query_builder_dialog.py  query_panel.py  query_tab.py  query_template_manager.py  schema_editor_dialog.py  template_management_dialog.py  ui_utils.py
utils/: __init__.py  encryption.py  error_handling.py  state_manager.py  validators.py
